# cppprojbuilder

./: .gitignore  AddCppLibrary  AddLibrary  CreateCppProject  README.md
.github/workflows/: ci.yml
doc/: command.md
template/project/: CMakeLists.txt
template/project/core/: CMakeLists.txt
template/project/core/cmake/: Config.cmake.in
template/project/doc/: CMakeLists.txt
template/project/exec/: CMakeLists.txt
test/: smoke_test.sh
